--- a/src/cart.html
+++ b/src/cart.html
@@ -10,6 +10,7 @@
 
         <main>            
             @@include('html/breadcrumbs.html')
+            @@include('html/cart.html')
         </main>
 
         <script src="js/app.min.js"></script>
