--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -5,13 +5,13 @@
         </div>
         <h2 class="popup__title">Получить дополнительную информацию</h2>
         <div class="popup__inputs">
-            <input class="popup__input" type="text" placeholder="Ваше имя" required>
-            <input class="popup__input" type="email" placeholder="E-mail" required>
-            <label class="popup__confirm">
+            <input class="popup__input input" type="text" placeholder="Ваше имя" required>
+            <input class="popup__input input" type="email" placeholder="E-mail" required>
+            <label class="popup__confirm confirm-checkbox">
                 <input type="checkbox">
                 Я готов на обработку персональных данных
             </label>
         </div>
-        <button type="submit" class="btn popup__btn">Оставить заявку</button>
+        <button type="submit" class="btn btn_green popup__btn">Оставить заявку</button>
     </form>
 </section>
