--- a/src/html/header.html
+++ b/src/html/header.html
@@ -4,7 +4,7 @@
             <div class="header__burger">
                 <span></span>
             </div>
-            <a href="#" class="header__logo">
+            <a href="index.html" class="header__logo">
                 <img src="@img/header/Logo.svg" alt="">
             </a>
             
@@ -662,7 +662,7 @@
         </div>
         <div class="tapbar__caption">Избранное</div>
     </a>
-    <a href="#" class="tapbar__item">
+    <a href="cart.html" class="tapbar__item">
         <div class="tapbar__icon" data-notification="1">
             <img src="@img/header/Busket.svg" alt="">
         </div>
