--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -11,7 +11,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-grid__item_2_2 catalog-card">
             <h4 class="catalog-card__title">
-                комоды
+                Комоды
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/1/product-2.png" alt="">
@@ -19,7 +19,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-card">
             <h4 class="catalog-card__title">
-                стеллажи
+                Стеллажи
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/1/product-3.png" alt="">
@@ -27,7 +27,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-card">
             <h4 class="catalog-card__title">
-                консоли
+                Консоли
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/1/product-4.png" alt="">
@@ -35,7 +35,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-card">
             <h4 class="catalog-card__title">
-                тумбы под ТВ
+                Тумбы под ТВ
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/1/product-5.png" alt="">
@@ -43,7 +43,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-card">
             <h4 class="catalog-card__title">
-                прикроватные
+                Прикроватные
                 тумбы 
             </h4>
             <div class="catalog-card__img">
@@ -52,7 +52,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-card">
             <h4 class="catalog-card__title">
-                полки
+                Полки
                 и полкодержатели
             </h4>
             <div class="catalog-card__img">
@@ -61,7 +61,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-card">
             <h4 class="catalog-card__title">
-                обувницы
+                Обувницы
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/1/product-8.png" alt="">
@@ -71,11 +71,11 @@
 </section>
 
 <section class="catalog container ">
-    <h2 class="section-title">шкафы</h2>
+    <h2 class="section-title">Шкафы</h2>
     <div class="catalog-grid">
         <a href="" class="catalog-grid__item catalog-grid__item_1_2 catalog-card catalog-card_inline" style="--bg: #A5A5A5;" data-marker-text="NEW!" data-marker-bg="#7FADA0">
             <h4 class="catalog-card__title">
-                шкафы для одежды
+                Шкафы для одежды
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/2/product-1.png" alt="">
@@ -83,7 +83,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-grid__item_1_2 catalog-card catalog-card_inline" style="--bg: #A5A5A5;">
             <h4 class="catalog-card__title">
-                антресоли
+                Антресоли
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/2/product-1.png" alt="">
@@ -91,7 +91,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-grid__item_1_2 catalog-card catalog-card_inline" style="--bg: #A5A5A5;">
             <h4 class="catalog-card__title">
-                шкафы-витрины
+                Шкафы-витрины
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/2/product-3.png" alt="">
@@ -99,7 +99,7 @@
         </a>
         <a href="" class="catalog-grid__item catalog-grid__item_1_2 catalog-card catalog-card_inline" style="--bg: #A5A5A5;">
             <h4 class="catalog-card__title">
-                шкафы для хранения
+                Шкафы для хранения
                 навесные и напольные
             </h4>
             <div class="catalog-card__img">
@@ -111,7 +111,7 @@
 </section>
 
 <section class="catalog container ">
-    <h2 class="section-title">коллекции</h2>
+    <h2 class="section-title">Коллекции</h2>
     <div class="catalog-slider">
         <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;" data-marker-text="SALE" data-marker-bg="#FFB835">
             <h4 class="catalog-card__title">
@@ -123,7 +123,7 @@
         </a>
         <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
             <h4 class="catalog-card__title">
-                паола
+                Паола
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/inline/product-1.png" alt="">
@@ -131,7 +131,7 @@
         </a>
         <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
             <h4 class="catalog-card__title">
-                канзас
+                Канзас
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/inline/product-1.png" alt="">
@@ -139,7 +139,7 @@
         </a>
         <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
             <h4 class="catalog-card__title">
-                мадейра
+                Мадейра
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/inline/product-1.png" alt="">
@@ -147,7 +147,7 @@
         </a>
         <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
             <h4 class="catalog-card__title">
-                корфу
+                Корфу
             </h4>
             <div class="catalog-card__img">
                 <img src="@img/catalog/inline/product-1.png" alt="">
