--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -108,7 +108,7 @@
                         </label>
                         <label class="radio">
                             <input type="radio" name="payment-type" value="3">
-                            Кредит «На родныя тавары» под 4% годовых
+                            <strong style="color: #339984;">Кредит «На родныя тавары» под 4% годовых</strong>
                         </label>
                         <label class="radio">
                             <input type="radio" name="payment-type" value="4" data-check-toggle="installment">
