--- a/src/html/header.html
+++ b/src/html/header.html
@@ -370,7 +370,7 @@
                     
             </ul>
             <div class="header__icons-menu">
-                <a href="#" class="header__icons-menu-item">
+                <a href="cart.html" class="header__icons-menu-item">
                     <img src="@img/header/Busket.svg" alt="">
                 </a>
                 <a href="#" class="header__icons-menu-item">
