--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -132,7 +132,7 @@
                         <label class="radio-card">
                             <input type="radio" name="installment-type" value="3">
                             <div class="radio-card__title">
-                                «КартаFUN» от ОАО «БПС‑Сбербанк»
+                                «КартаFUN» от ОАО <br> «БПС‑Сбербанк»
                             </div>
                             <div class="radio-card__caption">
                                 3 месяца
