--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -454,13 +454,13 @@
         <div class="order-form order-form_mobile" id="when-order-payment-mobile">
             <h2 class="order-form__title">когда вы желаете оплатить заказ?</h2>
             <div class="radio-cards">
-                <label class="radio-card radio-card_checked">
+                <label class="radio-card radio-card_outline radio-card_jcc radio-card_checked">
                     <input type="radio" name="when-order-payment" value="2" checked>
                     <div class="radio-card__title">
                         Сразу
                     </div>
                 </label>
-                <label class="radio-card">
+                <label class="radio-card radio-card_outline radio-card_jcc">
                     <input type="radio" name="when-order-payment" value="3" data-check-toggle="manager-connect-mobile">
                     <div class="radio-card__title">
                         После связи с менеджером
