fix: mobile menu + tags

--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -2,11 +2,13 @@
     <div class="hero__main-banner main-banner" style="--color: #FFF; --highlight: #FFBB80;">
         <img class="main-banner__img" src="@img/hero/main-banner.png" alt="">
         <div class="main-banner__tags">
-            <div class="main-banner__tag">
-                <img src="@img/hero/tag-1.png" alt="">
+            <div class="main-banner__tag main-banner__tag_dot" style="--tag-dot-color: #F0A462; --tag-bg: #2E2E2E;">
+                В НАЛИЧИИ
+                <!-- <img src="@img/hero/tag-1.png" alt=""> -->
             </div>
-            <div class="main-banner__tag">
-                <img src="@img/hero/tag-2.png" alt="">
+            <div class="main-banner__tag" style="--tag-bg: #F0A462;">
+                Товар недели
+                <!-- <img src="@img/hero/tag-2.png" alt=""> -->
             </div>
         </div>
         <h2 class="main-banner__title">
