--- a/src/html/header.html
+++ b/src/html/header.html
@@ -827,7 +827,7 @@
                 <li>
                     <a href="" class="additional-menu__contact">
                         <span>7577</span>
-                        Бесплатный номер
+                        Бесплатный номер <br>
                         для абонентов МТС / А1
                     </a>
                 </li>
