--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -26,7 +26,7 @@
     </div>
     <div class="hero__banners">
         <div class="hero__banners-wrapper">
-            <a class="banner" style="--bg: #C09564; --color: #FFF;">
+            <a href="" class="banner" style="--bg: #C09564; --color: #FFF;">
                 <h3 class="banner__title">
                     Скидка 10%
                     на новые шкафы Магнус
@@ -35,7 +35,7 @@
                     <img src="@img/hero/banner-1.png" alt="">
                 </div>
             </a>
-            <a class="banner" style="--bg: #747D8E; --color: #FFF;">
+            <a href="" class="banner" style="--bg: #747D8E; --color: #FFF;">
                 <h3 class="banner__title">
                     Скидка 10%
                     на комод Леонардо
@@ -44,7 +44,7 @@
                     <img src="@img/hero/banner-2.png" alt="">
                 </div>
             </a>
-            <a class="banner" style="--bg: #414141; --color: #FFF; --highlight: #FFBC70;">
+            <a href="" class="banner" style="--bg: #414141; --color: #FFF; --highlight: #FFBC70;">
                 <h3 class="banner__title">
                     <span>Черная пятница.</span> Грандиозные скидки на мебель
                     от фабрики «ЗОВ»
