--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -112,8 +112,8 @@
 
 <section class="catalog container ">
     <h2 class="section-title">Коллекции</h2>
-    <div class="catalog-slider">
-        <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;" data-marker-text="SALE" data-marker-bg="#FFB835">
+    <div class="catalog-slider draggable">
+        <a href="#" class="catalog-card catalog-card_inline" style="--bg: #827E94;" data-marker-text="SALE" data-marker-bg="#FFB835">
             <h4 class="catalog-card__title">
                 Аврора
             </h4>
@@ -121,7 +121,7 @@
                 <img src="@img/catalog/inline/product-1.png" alt="">
             </div>
         </a>
-        <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
+        <a href="#" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
             <h4 class="catalog-card__title">
                 Паола
             </h4>
@@ -129,7 +129,7 @@
                 <img src="@img/catalog/inline/product-1.png" alt="">
             </div>
         </a>
-        <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
+        <a href="#" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
             <h4 class="catalog-card__title">
                 Канзас
             </h4>
@@ -137,7 +137,7 @@
                 <img src="@img/catalog/inline/product-1.png" alt="">
             </div>
         </a>
-        <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
+        <a href="#" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
             <h4 class="catalog-card__title">
                 Мадейра
             </h4>
@@ -145,7 +145,7 @@
                 <img src="@img/catalog/inline/product-1.png" alt="">
             </div>
         </a>
-        <a href="" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
+        <a href="#" class="catalog-card catalog-card_inline" style="--bg: #827E94;">
             <h4 class="catalog-card__title">
                 Корфу
             </h4>
@@ -156,3 +156,51 @@
 
     </div>
 </section>
+
+<script>
+
+    let mouseDown = false;
+    let isDragging = false;
+    let startX, scrollLeft;
+    const slider = document.querySelector('.draggable');
+
+    const startDragging = (e) => {
+        mouseDown = true;
+        isDragging = false; // сбрасываем флаг перетаскивания
+        startX = e.pageX - slider.offsetLeft;
+        scrollLeft = slider.scrollLeft;
+    }
+
+    const stopDragging = (e) => {
+        mouseDown = false;
+    }
+
+    const move = (e) => {
+        e.preventDefault();
+        if (!mouseDown) { return; }
+        
+        const x = e.pageX - slider.offsetLeft;
+        const scroll = x - startX;
+        slider.scrollLeft = scrollLeft - scroll;
+        
+        if (Math.abs(scroll) > 5) { // если движение больше 5px, считаем, что началось перетаскивание
+            isDragging = true;
+        }
+    }
+
+    // Предотвращаем переход по ссылке, если было перетаскивание
+    slider.querySelectorAll('a').forEach(link => {
+        link.addEventListener('click', (e) => {
+            if (isDragging) {
+                e.preventDefault(); // отменяем переход по ссылке
+            }
+        });
+    });
+
+    // Добавляем обработчики событий
+    slider.addEventListener('mousemove', move, false);
+    slider.addEventListener('mousedown', startDragging, false);
+    slider.addEventListener('mouseup', stopDragging, false);
+    slider.addEventListener('mouseleave', stopDragging, false);
+
+</script>
