--- a/src/html/breadcrumbs.html
+++ b/src/html/breadcrumbs.html
@@ -1,4 +1,4 @@
-<section class="breadcrumbs container">
+<section class="breadcrumbs breadcrumbs_desc container">
     <a href="index.html" class="breadcrumbs__item">Главная</a>
     /
     <a href="javascript:void(0)" class="breadcrumbs__item">Корзина</a>
