--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -15,3 +15,36 @@
         <button type="submit" class="btn btn_green popup__btn">Оставить заявку</button>
     </form>
 </section>
+
+<section class="popup" data-popup="2" style="display: none;">
+    <form class="popup__inner">
+        <div class="popup__close">
+            <img src="@img/popup/close.svg" alt="">
+        </div>
+        <h2 class="popup__title popup__title_left">Регистрация</h2>
+        <div class="popup__inputs">
+            <input class="popup__input input" type="text" placeholder="Имя и фамилия*" required>
+            <input class="popup__input input" type="email" placeholder="Ваш E-mail*" required>
+            <input class="popup__input input" type="tel" placeholder="Номер телефона с кодом*" required>
+            <label class="popup__confirm confirm-checkbox">
+                <input type="checkbox">
+                Создать аккаунт и присоединиться к ZOV Online, чтобы получать персональные предложения и скидки.
+            </label>
+        </div>
+        <button type="submit" class="btn btn_green popup__btn">зарегистрироваться</button>
+    </form>
+</section>
+
+<section class="popup" data-popup="3" style="display: none;">
+    <form class="popup__inner">
+        <div class="popup__close">
+            <img src="@img/popup/close.svg" alt="">
+        </div>
+        <h2 class="popup__title popup__title_left">войдите в аккаунт</h2>
+        <div class="popup__inputs">
+            <input class="popup__input input" type="email" placeholder="Ваш E-mail*" required>
+            <input class="popup__input input" type="password" placeholder="Пароль" required>
+        </div>
+        <button type="submit" class="btn btn_black popup__btn">войти в аккаунт</button>
+    </form>
+</section>
